Try to fix issue with generic effect builder